--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.6.2",
+    "bluebird": "^3.5.1",
     "deck.gl": "^5.3.1",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
