remove gh-pages

--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "predeploy": "yarn build",
-    "deploy": "gh-pages -b master -d build",
     "storybook": "start-storybook -p 9009 -s public",
     "build-storybook": "build-storybook -s public"
   },
@@ -31,8 +29,7 @@
     "@storybook/addons": "^3.4.11",
     "@storybook/react": "^3.4.11",
     "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
-    "gh-pages": "^1.2.0"
+    "babel-runtime": "^6.26.0"
   },
   "browserslist": [
     ">0.2%",
