--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
     "antd": "^3.6.2",
     "bluebird": "^3.5.1",
     "deck.gl": "^5.3.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "react": "16.7.0-alpha.2",
+    "react-dom": "16.7.0-alpha.2",
     "react-map-gl": "^3.2.9",
-    "react-scripts": "2.0.5"
-  },
-  "engines": {
-    "node": "9.10.0"
+    "react-scripts": "2.1.3"
   },
   "homepage": "http://payers1.github.io",
   "scripts": {
