--- a/.drone.yml
+++ b/.drone.yml
@@ -13,5 +13,5 @@ pipeline:
     image: plugins/docker
     commands:
       - printenv
-      - /usr/local/bin/dockerd volume ls
+      - /usr/local/bin/dockerd --help
       - /usr/local/bin/docker version
