--- a/.drone.yml
+++ b/.drone.yml
@@ -13,5 +13,7 @@ pipeline:
     image: plugins/docker
     dockerfile: Dockerfile
     tags: latest
-    repo: payers/test
+    repo: payers1/test
+    build_args:
+      - TEST=test
 
